[package]
name = "configmap_viewer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.44"
futures = "0.3.17"
kube = { version = "0.70.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0"


[[bin]]
name = "cv"
path = "src/configmap_viewer.rs"
